--- a/online-help-96-97/concept_what_nvme_subsystem_is.adoc
+++ b/online-help-96-97/concept_what_nvme_subsystem_is.adoc
@@ -4,13 +4,13 @@ sidebar: sidebar
 keywords: nvme, subsystem, fc, rdma, transport, port, vserver, online, help, controller, cluster, table, settings, manage
 summary: "An NVMe subsystem includes one or more controllers, one or more namespaces, one or more non-volatile memory (NVM) subsystem ports (FC-NVMe or RDMA transport ports), an NVM storage medium, and an interface between the controllers and the NVM storage medium. For controller mapping and management, an NVM subsystem maps to a vserver in ONTAP."
 ---
-= Manage NVMe subsystems
+= Manage NVMe subsystems with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
 
-An NVMe subsystem can be created using System Manager. You can associate the NVMe subsystem with different hosts and namespaces within the vserver. Also, each vserver can support more than one NVMe subsystem. However, you cannot configure a NVMe subsystem to be used on multiple vservers.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create and manage an NVMe subsystem. You can associate the NVMe subsystem with different hosts and namespaces within the vserver. Also, each vserver can support more than one NVMe subsystem. However, you cannot configure a NVMe subsystem to be used on multiple vservers.
 
 == Create NVMe subsystems
 
