--- a/online-help-96-97/task_editing_nvme_namespace.adoc
+++ b/online-help-96-97/task_editing_nvme_namespace.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: edit, nvme, namespace, online, help, system, manager
 summary: "You can use System Manager to edit the namespace by changing the subsystem that the namespace is mapped to."
 ---
-= Editing an NVMe namespace
+= Edit an NVMe namespace with System Manger - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to edit the namespace by changing the subsystem that the namespace is mapped to.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to edit the namespace by changing the subsystem that the namespace is mapped to.
 
 .About this task
 
