--- a/online-help-96-97/concept_efficiency_policies.adoc
+++ b/online-help-96-97/concept_efficiency_policies.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: efficiency, policy, system, manager, create, edit, delete, online, help, flexvol, window
 summary: "You can use System Manager to create, edit, and delete efficiency policies."
 ---
-= Efficiency policies
+= Manage efficiency policies with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create, edit, and delete efficiency policies.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create, edit, and delete efficiency policies.
 
 == Add efficiency policies
 
