--- a/online-help-96-97/concept_nfs_protocol.adoc
+++ b/online-help-96-97/concept_nfs_protocol.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: nfs, protocol, system, manager, authenticate, client, asses, data, svm, online, help
 summary: "You can use System Manager to authenticate NFS clients to access data on the SVM."
 ---
-= NFS protocol
+= Configure the NFS protocol with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to authenticate NFS clients to access data on the SVM.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to authenticate NFS clients to access data on the SVM.
 
 == Edit NFS settings
 
