--- a/online-help-96-97/concept_qtrees.adoc
+++ b/online-help-96-97/concept_qtrees.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, create, edit, delete, qtree, partition, data, policies, svm
 summary: "You can use System Manager create, edit, and delete Qtrees."
 ---
-= Qtrees
+= Manage Qtrees with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager create, edit, and delete Qtrees.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create, edit, and delete Qtrees.
 
 == Create qtrees
 
