--- a/online-help-96-97/task_adding_home_directory_paths.adoc
+++ b/online-help-96-97/task_adding_home_directory_paths.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: cifs, system, manager, online, help, storage, add , delete, home, directory
 summary: "You can use System Manager to specify one or more paths that can be used by the storage system to resolve the location of the CIFS home directories of users."
 ---
-= Add home directory paths
+= Manage home directory paths - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to specify one or more paths that can be used by the storage system to resolve the location of the CIFS home directories of users.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to specify one or more paths that can be used by the storage system to resolve the location of the CIFS home directories of users.
 
 .Steps
 
