--- a/online-help-96-97/task_cloning_nvme_namespace.adoc
+++ b/online-help-96-97/task_cloning_nvme_namespace.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, clone, nvme, namespace, nqn, online, help
 summary: "You can use System Manager to quickly create another namespace of the same configuration by choosing to clone a namespace. You can map the newly cloned namespace to another host NQN."
 ---
-= Cloning an NVMe namespace
+= Clone an NVMe namespace with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to quickly create another namespace of the same configuration by choosing to clone a namespace. You can map the newly cloned namespace to another host NQN.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to quickly create another namespace of the same configuration by choosing to clone a namespace. You can map the newly cloned namespace to another host NQN.
 
 .Before you begin
 
