--- a/online-help-96-97/task_creating_nvme_namespace.adoc
+++ b/online-help-96-97/task_creating_nvme_namespace.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, create, nvme, namespace, svm, logical, blocks, online, help
 summary: "You can use System Manager to create one or more NVMe namespaces and connect each to a host or set of hosts in a storage virtual machine (SVM). The NVMe namespace is a quantity of memory that can be formatted into logical blocks. Each namespace can be mapped to an NVMe subsystem."
 ---
-= Create an NVMe namespace
+= Create an NVMe namespace with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create one or more NVMe namespaces and connect each to a host or set of hosts in a storage virtual machine (SVM). The NVMe namespace is a quantity of memory that can be formatted into logical blocks. Each namespace can be mapped to an NVMe subsystem.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create one or more NVMe namespaces and connect each to a host or set of hosts in a storage virtual machine (SVM). The NVMe namespace is a quantity of memory that can be formatted into logical blocks. Each namespace can be mapped to an NVMe subsystem.
 
 .Before you begin
 
