--- a/online-help-96-97/task_deleting_qos_policy_groups.adoc
+++ b/online-help-96-97/task_deleting_qos_policy_groups.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: online, help, delete, qos, policy, groups, system, manager
 summary: "You can use System Manager to delete a Storage Quality of Service (QoS) policy group that is no longer required."
 ---
-= Deleting QoS policy groups
+= Delete QoS policy groups with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to delete a Storage Quality of Service (QoS) policy group that is no longer required.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to delete a Storage Quality of Service (QoS) policy group that is no longer required.
 
 .Before you begin
 
