--- a/online-help-96-97/task_editing_qos_policy_groups.adoc
+++ b/online-help-96-97/task_editing_qos_policy_groups.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: edit, qos, policy, group, group, dialog, system, manager, online, help
 summary: "You can use the Edit Policy Group dialog box in System Manager to modify the name and maximum throughput of an existing storage Quality of Service (QoS) policy group."
 ---
-= Editing QoS policy groups
+= Edit QoS policy groups with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the Edit Policy Group dialog box in System Manager to modify the name and maximum throughput of an existing storage Quality of Service (QoS) policy group.
+You can use the Edit Policy Group dialog box in ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to modify the name and maximum throughput of an existing storage Quality of Service (QoS) policy group.
 
 .About this task
 
