--- a/online-help-96-97/task_setting_up_branchcache.adoc
+++ b/online-help-96-97/task_setting_up_branchcache.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: cifs, svm, system, manager, online, help, branchcache, set, up, modify, settings, delete
 summary: "You can use System Manager to configure BranchCache on a CIFS-enabled storage virtual machine (SVM) to enable the caching of content on computers that are local to the requesting clients."
 ---
-= Setting up BranchCache
+= Configure BranchCache with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to configure BranchCache on a CIFS-enabled storage virtual machine (SVM) to enable the caching of content on computers that are local to the requesting clients.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to configure BranchCache on a CIFS-enabled storage virtual machine (SVM) to enable the caching of content on computers that are local to the requesting clients.
 
 .Before you begin
 
