--- a/online-help-96-97/task_viewing_cifs_domain_information.adoc
+++ b/online-help-96-97/task_viewing_cifs_domain_information.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, view, cifs, domain, information, online, help
 summary: "You can use System Manager to view information about the domain controllers and servers that are connected to the storage system."
 ---
-= Viewing CIFS domain information
+= View CIFS domain information with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to view information about the domain controllers and servers that are connected to the storage system.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to view information about the domain controllers and servers that are connected to the storage system.
 
 .Steps
 
