--- a/online-help-96-97/concept_nis_services.adoc
+++ b/online-help-96-97/concept_nis_services.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: online, help, system, manager, nis, services, add, edit, manage, network, information, service, domain, svm, modify, command
 summary: "You can use System Manager to add, edit, and manage Network Information Service (NIS) domains."
 ---
-= NIS services
+= Manage NIS services with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to add, edit, and manage Network Information Service (NIS) domains.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to add, edit, and manage Network Information Service (NIS) domains.
 
 == Add NIS domains
 
