remove 'ing' from title - sm classic rework Mairead

--- a/online-help-96-97/concept_svm_user_accounts.adoc
+++ b/online-help-96-97/concept_svm_user_accounts.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: system, manager, create, manage, online, help, storage, virtual, machine, svm, user, account, password, change, lock, unlock , command, button
 summary: "You can use System Manager to create and manage storage virtual machine (SVM) user accounts."
 ---
-= Creating and managing storage virtual machine (SVM) user accounts with System Manager - ONTAP 9.7 and earlier
+= Create and manage storage virtual machine (SVM) user accounts with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
