--- a/online-help-96-97/concept_name_mapping.adoc
+++ b/online-help-96-97/concept_name_mapping.adoc
@@ -9,7 +9,7 @@ summary: "You can use System Manager to specify name mapping entries to map user
 :imagesdir: ../media/
 
 [.lead]
-You can use You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to specify name mapping entries to map users from different platforms.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to specify name mapping entries to map users from different platforms.
 
 == Name mapping conversion rules
 
