--- a/online-help-96-97/concept_svm_relationships.adoc
+++ b/online-help-96-97/concept_svm_relationships.adoc
@@ -9,9 +9,7 @@ summary: "Storage virtual machine (SVM) disaster recovery (DR) provides disaster
 :imagesdir: ../media/
 
 [.lead]
-Storage virtual machine (SVM) disaster recovery (DR) provides disaster recovery capability at the SVM level by enabling the recovery of the data that is present in the constituent volumes of the SVM and the recovery of the SVM configuration.
-
-You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create and manage mirror relationships and mirror and vault relationships between SVMs.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create and manage mirror relationships and mirror and vault relationships between SVMs. Storage virtual machine (SVM) disaster recovery (DR) provides disaster recovery capability at the SVM level by enabling the recovery of the data that is present in the constituent volumes of the SVM and the recovery of the SVM configuration. 
 
 == Create SVM relationships
 
