--- a/online-help-96-97/task_resuming_mirror_relationships.adoc
+++ b/online-help-96-97/task_resuming_mirror_relationships.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: resume, mirror, relationship, normal, data, transfer, online, help
 summary: "You can resume a quiesced mirror relationship. When you resume the relationship, normal data transfer to the mirror destination is resumed and all the mirror activities are restarted."
 ---
-= Resuming mirror relationships with System Manager - ONTAP 9.7 and earlier
+= Resume quiesced mirror relationships with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
