--- a/online-help-96-97/task_resynchronizing_mirror_relationships.adoc
+++ b/online-help-96-97/task_resynchronizing_mirror_relationships.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: resync, mirror, relationship, operation, online, help
 summary: "You can reestablish a mirror relationship that was broken earlier. You can perform a resynchronization operation to recover from a disaster that disabled the source volume."
 ---
-= Resynchronizing mirror relationships with System Manager - ONTAP 9.7 and earlier
+= Resynchronize mirror relationships with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) tore reestablish a mirror relationship that was broken earlier. You can perform a resynchronization operation to recover from a disaster that disabled the source volume.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to reestablish a mirror relationship that was broken earlier. You can perform a resynchronization operation to recover from a disaster that disabled the source volume.
 
 .Before you begin
 
