--- a/nas-multiprotocol-config/task_deciding_where_to_provision_new_volume.adoc
+++ b/nas-multiprotocol-config/task_deciding_where_to_provision_new_volume.adoc
@@ -21,8 +21,8 @@ You must choose this option if CIFS and NFS are not already enabled on an existi
 
 * If you want to provision a volume on an existing SVM that has both CIFS and NFS enabled but not configured, add CIFS and NFS access on the existing SVM.
 +
-link:concept_adding_nas_access_to_existing_svm.md#[Adding CIFS and NFS access on an existing SVM]
+link:concept_adding_nas_access_to_existing_svm.html[Adding CIFS and NFS access on an existing SVM]
 
 * If you want to provision a volume on an existing SVM that is fully configured for CIFS and NFS multiprotocol access, you can directly create and configure the volume.
 +
-link:task_creating_configuring_volume.md#[Creating and configuring a volume]
+link:task_creating_configuring_volume.html[Creating and configuring a volume]
