remove 'ing' from titles for SM classic rework (Mairead)

--- a/online-help-96-97/task_aborting_vault_relationships.adoc
+++ b/online-help-96-97/task_aborting_vault_relationships.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: abort, snapshot, copy, transfer, online, help, system, manager
 summary: "You can use System Manager to abort or stop a data transfer that is currently in progress."
 ---
-= Aborting a Snapshot copy transfer with System Manager - ONTAP 9.7 and earlier
+= Abort a Snapshot copy transfer with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
