--- a/online-help-96-97/task_editing_vault_relationships.adoc
+++ b/online-help-96-97/task_editing_vault_relationships.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: edit, vault, relationships, system, manager, online, help, cluster, schedule
 summary: "You can use System Manager to edit a vault relationship either by selecting an existing policy or schedule in the cluster, or by creating a new policy or schedule. However, you cannot edit the parameters of an existing policy or schedule."
 ---
-= Editing vault relationships with System Manager - ONTAP 9.7 and earlier
+= Edit vault relationships with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
