--- a/online-help-96-97/task_initializing_mirror_vault_relationships.adoc
+++ b/online-help-96-97/task_initializing_mirror_vault_relationships.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: initialize, mirror, vault, relationship, online, help, system, manager
 summary: "You can use System Manager to initialize a mirror and vault relationship if you have not already initialized the relationship while creating it. When you initialize a relationship, a complete baseline transfer of data is performed from the source volume to the destination."
 ---
-= Initializing mirror and vault relationships with System Manager - ONTAP 9.7 and earlier
+= Initialize mirror and vault relationships with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
