--- a/online-help-96-97/task_restoring_volume_vault_relationship.adoc
+++ b/online-help-96-97/task_restoring_volume_vault_relationship.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: system, manager, restore, volume, vault, relationship, online, help, snapshot, copy
 summary: "You can use System Manager to restore Snapshot copies to a source volume or to other volumes if the source data is corrupted and is no longer usable. You can replace the original data with the Snapshot copies in the destination volume."
 ---
-= Restoring a volume in a vault relationship with System Manager - ONTAP 9.7 and earlier
+= Restore a volume in a vault relationship with System Manager - ONTAP 9.7 and earlier
 
 :icons: font
 :imagesdir: ../media/
