--- a/online-help-96-97/task_aborting_mirror_vault_relationships.adoc
+++ b/online-help-96-97/task_aborting_mirror_vault_relationships.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: abort, mirror, vault, relationship, online, help, data, transfer
 summary: "You can abort a volume replication operation if you want to stop the data transfer. You can abort a scheduled update, a manual update, or an initial data transfer."
 ---
-= Aborting mirror and vault relationships
+= Abort mirror and vault relationships with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can abort a volume replication operation if you want to stop the data transfer. You can abort a scheduled update, a manual update, or an initial data transfer.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to abort a volume replication operation if you want to stop the data transfer. You can abort a scheduled update, a manual update, or an initial data transfer.
 
 .Steps
 
