--- a/online-help-96-97/task_adding_user_accounts_to_windows_local_group.adoc
+++ b/online-help-96-97/task_adding_user_accounts_to_windows_local_group.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: add, user, accounts, windows, local, group, active, directory, online, help
 summary: "You can add a local user, an Active Directory user, or an Active Directory group (if you want users to have the privileges that are associated with that group)to a Windows local group by using System Manager."
 ---
-= Add user accounts to a Windows local group
+= Add user accounts to a Windows local group with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can add a local user, an Active Directory user, or an Active Directory group(if you want users to have the privileges that are associated with that group)to a Windows local group by using System Manager.
+You can add a local user, an Active Directory user, or an Active Directory group (if you want users to have the privileges that are associated with that group) to a Windows local group by using ONTAP System Manager classic (available in ONTAP 9.7 and earlier).
 
 .Before you begin
 
