--- a/online-help-96-97/task_changing_password_for_windows_local_users.adoc
+++ b/online-help-96-97/task_changing_password_for_windows_local_users.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: reset, password, windows, local, user, online, help, system, manager
 summary: "You can use System Manager to reset the password of a Windows local user. For example, you might want to reset the password if the current password is compromised or if the user has forgotten the password."
 ---
-= Resetting the password of a Windows local user
+= Reset the password of a Windows local user with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to reset the password of a Windows local user. For example, you might want to reset the password if the current password is compromised or if the user has forgotten the password.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to reset the password of a Windows local user. For example, you might want to reset the password if the current password is compromised or if the user has forgotten the password.
 
 .About this task
 
