--- a/online-help-96-97/task_deleting_local_windows_group.adoc
+++ b/online-help-96-97/task_deleting_local_windows_group.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: delete, local, windows, group, systems, manager, online, help, svm, rights
 summary: "You can use System Manager to delete a local Windows group from a storage virtual machine (SVM) if the group is no longer required for determining access rights to the data contained on the SVM or for assigning SVM user rights (privileges) to group members."
 ---
-= Deleting a local Windows group
+= Delete a local Windows group with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to delete a local Windows group from a storage virtual machine (SVM) if the group is no longer required for determining access rights to the data contained on the SVM or for assigning SVM user rights (privileges) to group members.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to delete a local Windows group from a storage virtual machine (SVM) if the group is no longer required for determining access rights to the data contained on the SVM or for assigning SVM user rights (privileges) to group members.
 
 .About this task
 
