--- a/online-help-96-97/task_deleting_mirror_relationships.adoc
+++ b/online-help-96-97/task_deleting_mirror_relationships.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: delete, mirror, relationships, online, help, snapshot, copy
 summary: "You can delete a mirror relationship and permanently end the mirror relationship between the source and destination volumes. When a mirror relationship is deleted, the base Snapshot copy on the source volume is deleted."
 ---
-= Deleting mirror relationships
+= Delete mirror relationships with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can delete a mirror relationship and permanently end the mirror relationship between the source and destination volumes. When a mirror relationship is deleted, the base Snapshot copy on the source volume is deleted.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to delete a mirror relationship and permanently end the mirror relationship between the source and destination volumes. When a mirror relationship is deleted, the base Snapshot copy on the source volume is deleted.
 
 .About this task
 
