--- a/online-help-96-97/task_editing_local_windows_user_properties.adoc
+++ b/online-help-96-97/task_editing_local_windows_user_properties.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: edit, local, window, user, properties, system, manager, online, help
 summary: "You can use System Manager to modify a local Windows user account if you want to change an existing user’s full name or description, or if you want to enable or disable the user account. You can also modify the group memberships that are assigned to the user account."
 ---
-= Editing the local Windows user properties
+= Edit local Windows user properties with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to modify a local Windows user account if you want to change an existing user's full name or description, or if you want to enable or disable the user account. You can also modify the group memberships that are assigned to the user account.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to modify a local Windows user account if you want to change an existing user's full name or description, or if you want to enable or disable the user account. You can also modify the group memberships that are assigned to the user account.
 
 .Steps
 
