--- a/online-help-96-97/task_editing_mirror_relationships.adoc
+++ b/online-help-96-97/task_editing_mirror_relationships.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, edit, mirror, relationships, online, help
 summary: "You can use System Manager to edit a mirror relationship either by selecting an existing policy or schedule in the cluster, or by creating a policy or schedule."
 ---
-= Editing mirror relationships
+= Edit mirror relationships with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to edit a mirror relationship either by selecting an existing policy or schedule in the cluster, or by creating a policy or schedule.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to edit a mirror relationship either by selecting an existing policy or schedule in the cluster, or by creating a policy or schedule.
 
 .About this task
 
