--- a/online-help-96-97/task_quiescing_mirror_relationships.adoc
+++ b/online-help-96-97/task_quiescing_mirror_relationships.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: quiesce, mirror, relationship, system, manager, online, help
 summary: "You can use System Manager to quiesce a mirror destination to stabilize it before creating a Snapshot copy. The quiesce operation enables active mirror transfers to finish and disables future transfers for the mirroring relationship."
 ---
-= Quiescing mirror relationships
+= Quiesce mirror relationships with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to quiesce a mirror destination to stabilize it before creating a Snapshot copy. The quiesce operation enables active mirror transfers to finish and disables future transfers for the mirroring relationship.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to quiesce a mirror destination to stabilize it before creating a Snapshot copy. The quiesce operation enables active mirror transfers to finish and disables future transfers for the mirroring relationship.
 
 .About this task
 
