--- a/online-help-96-97/task_renaming_local_windows_group.adoc
+++ b/online-help-96-97/task_renaming_local_windows_group.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: rename, local, windows, group, system, manager, online, help
 summary: "You can use System Manager to rename a local Windows group to identify the group more easily."
 ---
-= Renaming a local Windows group
+= Rename a local Windows group with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to rename a local Windows group to identify the group more easily.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to rename a local Windows group to identify the group more easily.
 
 .About this task
 
