--- a/online-help-96-97/task_updating_mirror_relationships.adoc
+++ b/online-help-96-97/task_updating_mirror_relationships.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: online, help, update, mirror, relationship, unscheduled
 summary: "You can initiate an unscheduled mirror update of the destination. You might have to perform a manual update to prevent data loss due to an upcoming power outage, scheduled maintenance, or data migration."
 ---
-= Updating mirror relationships
+= Update mirror relationships with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can initiate an unscheduled mirror update of the destination. You might have to perform a manual update to prevent data loss due to an upcoming power outage, scheduled maintenance, or data migration.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to initiate an unscheduled mirror update of the destination. You might have to perform a manual update to prevent data loss due to an upcoming power outage, scheduled maintenance, or data migration.
 
 .Before you begin
 
