--- a/online-help-96-97/task_editing_mirror_relationships.adoc
+++ b/online-help-96-97/task_editing_mirror_relationships.adoc
@@ -4,12 +4,184 @@ sidebar: sidebar
 keywords: system, manager, edit, mirror, relationships, online, help
 summary: "You can use System Manager to edit a mirror relationship either by selecting an existing policy or schedule in the cluster, or by creating a policy or schedule."
 ---
-= Edit mirror relationships with System Manager - ONTAP 9.7 and earlier
+= Manage mirror relationships with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to edit a mirror relationship either by selecting an existing policy or schedule in the cluster, or by creating a policy or schedule.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to manage mirror relationships. You can update, quiesce, initialize, reestablish, delete and edit mirror relationships in addition to resuming quiesced mirror relationships.
+
+== Delete relationships
+:icons: font
+:imagesdir: ../media/
+
+[.lead]
+You can use System Manager to delete a mirror relationship and permanently end the mirror relationship between the source and destination volumes. When a mirror relationship is deleted, the base Snapshot copy on the source volume is deleted.
+
+.About this task
+
+It is a best practice to break the mirror relationship before deleting the relationship.
+
+.Steps
+
+. Click *Protection* > *Volume Relationships*.
+. Select the mirror relationship that you want to delete and click *Delete*.
+. Select the confirmation check boxes to delete the mirror relationship and to release the base Snapshot copies, and then click *Delete*.
+
+.Results
+
+The relationship is deleted, and the base Snapshot copy on the source volume is deleted.
+
+*Related information*
+
+xref:reference_protection_window.adoc[Protection window]
+
+== Resynchronize relationships
+:icons: font
+:imagesdir: ../media/
+
+[.lead]
+You can use System Manager to reestablish a mirror relationship that was broken earlier. You can perform a resynchronization operation to recover from a disaster that disabled the source volume.
+
+.Before you begin
+
+The source cluster and destination cluster and the source SVM and destination SVM must be in peer relationships.
+
+.About this task
+
+* When you perform a resynchronization operation, the contents on the mirror destination are overwritten by the contents on the source volume.
++
+[NOTE]
+====
+
+-   For SnapLock compliance volumes, all data changes in the active file system with reference to the common Snapshot copy are preserved in a locked Snapshot copy until the expiry time that is set for the current volume.
++
+If the volume expiry time is in the past or has not been set, then the Snapshot copy and the common Snapshot copy are locked for a duration of 30 days. All of the intermediate Snapshot copies between the common Snapshot copy and the latest locked Snapshot copy are deleted.
+
+-   For all volumes other than SnapLock compliance volumes, the resynchronization operation might cause loss of newer data that is written to the destination volume after the base Snapshot copy was created.
+====
+
+* If the Last Transfer Error field in the Protection window recommends a resynchronization operation, you must first break the relationship, and then perform the resynchronization operation.
+
+.Steps
+
+. Click *Protection* > *Volume Relationships*.
+. Select the mirror relationship that you want to resynchronize.
+. Click *Operations* > *Resync*.
+. Select the confirmation checkbox, and then click *Resync*.
+
+*Related information*
+
+xref:reference_protection_window.adoc[Protection window]
+
+
+== Resume quiesced relationships
+:icons: font
+:imagesdir: ../media/
+
+[.lead]
+You can use System Manager to resume a quiesced mirror relationship. When you resume the relationship, normal data transfer to the mirror destination is resumed and all the mirror activities are restarted.
+
+.About this task
+
+If you have quiesced a broken mirror relationship from the command-line interface (CLI), you cannot resume the relationship from System Manager. You must use the CLI to resume the relationship.
+
+.Steps
+
+. Click *Protection* > *Volume Relationships*.
+. Select the mirror relationship that you want to resume.
+. Click *Operations* > *Resume*.
+. Select the confirmation check box and click *Resume*.
+
+.Results
+
+Data transfer to the mirror destination resumes for the selected mirror relationship.
+
+*Related information*
+
+xref:reference_protection_window.adoc[Protection window]
+
+== Update relationships
+:icons: font
+:imagesdir: ../media/
+
+[.lead]
+You can use System Manager to initiate an unscheduled mirror update of the destination. You might have to perform a manual update to prevent data loss due to an upcoming power outage, scheduled maintenance, or data migration.
+
+.Before you begin
+
+The mirror relationship must be in a Snapmirrored state.
+
+.About this task
+
+.Steps
+
+. Click *Protection* > *Volume Relationships*.
+. Select the mirror relationship for which you want to update the data, and click *Operations* > *Update*.
+. Choose one of the following options:
+ ** Select *On demand* to perform an incremental transfer from the recent common Snapshot copy between the source and destination volumes.
+ ** Select *Select Snapshot copy* and specify the Snapshot copy that you want to transfer.
+. Select *Limit transfer bandwidth to* to limit the network bandwidth used for transfers and specify the maximum transfer speed.
+. Click *Update*.
+. Verify the transfer status in the *Details* tab.
+
+*Related information*
+
+xref:reference_protection_window.adoc[Protection window]
+
+== Quiesce relationships
+:icons: font
+:imagesdir: ../media/
+
+[.lead]
+You can use System Manager to quiesce a mirror destination to stabilize it before creating a Snapshot copy. The quiesce operation enables active mirror transfers to finish and disables future transfers for the mirroring relationship.
+
+.About this task
+
+You can quiesce only mirror relationships that are in the Snapmirrored state.
+
+.Steps
+
+. Click *Protection* > *Volume Relationships*.
+. Select the mirror relationship that you want to quiesce.
+. Click *Operations* > *Quiesce*.
+. Select the confirmation check box and click *Quiesce*.
+
+*Related information*
+
+xref:reference_protection_window.adoc[Protection window]
+
+== Initialize relationships
+:icons: font
+:imagesdir: ../media/
+
+[.lead]
+When you start a mirror relationship, you must initialize that relationship. Initializing a relationship consists of a complete baseline transfer of data from the source volume to the destination. You can use System Manager to initialize a mirror relationship if you have not already initialized the relationship while creating it.
+
+.About this task
+
+.Steps
+
+. Click *Protection* > *Volume Relationships*.
+. Select the mirror relationship that you want to initialize.
+. Click *Operations* > *Initialize*.
+. Select the confirmation check box and click *Initialize*.
+. Verify the status of the mirror relationship in the *Protection* window.
+
+.Results
+
+A Snapshot copy is created and transferred to the destination. This Snapshot copy is used as a baseline for subsequent incremental Snapshot copies.
+
+*Related information*
+
+xref:reference_protection_window.adoc[Protection window]
+
+== Edit relationships
+:icons: font
+:imagesdir: ../media/
+
+[.lead]
+You can use System Manager to edit a mirror relationship either by selecting an existing policy or schedule in the cluster, or by creating a policy or schedule.
 
 .About this task
 
