--- a/online-help-96-97/task_quiescing_mirror_vault_relationships.adoc
+++ b/online-help-96-97/task_quiescing_mirror_vault_relationships.adoc
@@ -1,26 +1,4 @@
 ---
 permalink: online-help-96-97/task_quiescing_mirror_vault_relationships.html
-sidebar: sidebar
-keywords: quiescing, mirror, vault, relationship, system, manager, snapshot, online, help
-summary: "You can use System Manager to quiesce a destination volume to stabilize the destination before creating a Snapshot copy. The quiesce operation enables active data transfers to finish and disables future transfers for the mirror and vault relationship."
+redirect: online-help-96-97/task_editing_mirror_vault_relationships.html
 ---
-= Quiesce mirror and vault relationships with System Manager - ONTAP 9.7 and earlier
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to quiesce a destination volume to stabilize the destination before creating a Snapshot copy. The quiesce operation enables active data transfers to finish and disables future transfers for the mirror and vault relationship.
-
-.Before you begin
-
-The mirror and vault relationship must be in a Snapmirrored state.
-
-.Steps
-
-. Click *Protection* > *Volume Relationships*.
-. Select the mirror and vault relationship that you want to quiesce, and then click *Operations* > *Quiesce*.
-. Select the confirmation check box, and then click *Quiesce*.
-
-.Results
-
-If there is no transfer in progress, the transfer status is displayed as Quiesced. If a transfer is in progress, the transfer is not affected, and the transfer status is displayed as Quiescing until the transfer is complete.
