--- a/online-help-96-97/task_resuming_mirror_relationships.adoc
+++ b/online-help-96-97/task_resuming_mirror_relationships.adoc
@@ -1,31 +1,4 @@
 ---
 permalink: online-help-96-97/task_resuming_mirror_relationships.html
-sidebar: sidebar
-keywords: resume, mirror, relationship, normal, data, transfer, online, help
-summary: "You can resume a quiesced mirror relationship. When you resume the relationship, normal data transfer to the mirror destination is resumed and all the mirror activities are restarted."
+redirect: ontap-sm-classic/online-help-96-97/task_editing_mirror_relationships.html
 ---
-= Resume quiesced mirror relationships with System Manager - ONTAP 9.7 and earlier
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to resume a quiesced mirror relationship. When you resume the relationship, normal data transfer to the mirror destination is resumed and all the mirror activities are restarted.
-
-.About this task
-
-If you have quiesced a broken mirror relationship from the command-line interface (CLI), you cannot resume the relationship from System Manager. You must use the CLI to resume the relationship.
-
-.Steps
-
-. Click *Protection* > *Volume Relationships*.
-. Select the mirror relationship that you want to resume.
-. Click *Operations* > *Resume*.
-. Select the confirmation check box and click *Resume*.
-
-.Results
-
-Data transfer to the mirror destination resumes for the selected mirror relationship.
-
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
